# audiotags

./: Cargo.toml
audiotags-macro/src/: lib.rs
src/: clear_tag.rs  config.rs  lib.rs  traits.rs
src/components/: flac_tag.rs  id3_tag.rs  mp4_tag.rs
tests/: io.rs
